# biodegradables-platform

./: .dockerignore  .env.demo.example  .gitignore  AUDITORIA_TECNICA_2026-06-12.md  AUTOMATIZACIONES_EMPRESA.md  CLAUDE.md  DEMO_FASE5_RUNBOOK.md  DEMO_GUION.md  Dockerfile  PROPUESTA_ARQUITECTURA_MULTIEMPRESA.md  PROPUESTA_DEMO_COMERCIAL.md  PROPUESTA_TIKTOK_MEDIA_MANAGER.md  PROPUESTA_VER_OS.md  ROADMAP.md  activities_manifest.json  activities_template.json  activities_template_gsanchez.json  activities_template_info.json  activities_template_quito.json  activity_state.py  activity_tracker.py  admin_api.py  agent.py  apollo_completion_notifier.py  apollo_rest.py  apollo_stats.py  ask_agent.py  azure_setup_checklist.md  bot_cards.py  calendar_client.py  cobranzas_sync.py  company_context.md  condiciones_credito.json  contifico_client.py  contifico_recode.py  conversation_history.py  core_config.py  credito_excel.py  daily_logistics_report.py  daily_report.py  (+48 more)
archive/: README.md  apollo_orchestrator.py  run_apollo_notifier.bat  run_apollo_orchestrator.bat
azfunc/: apollo_orchestrator.json  apollo_orchestrator.py  apollo_rest.py  bot_handler.py  chat_agent.py  condiciones_credito.json  contifico_client.py  core_config.py  credito_excel.py  daily_logistics_report.py  daily_report.py  dispatch_state.py  ec_holidays.py  function_app.py  graph_mail.py  manifest.json  outlook_client.py  pbi_query.py  reply_agent.py  reply_state.py  requirements.txt  safe_json.py
connectors/: __init__.py  contifico_erp.py  factory.py  graph_mailer.py  hubspot_crm.py
core/: __init__.py  (+1 more)
(+198 files in other folders)
